# mission_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: Mission.msg  MissionStatus.msg  Task.msg  TaskStatus.msg
srv/: InsertTask.srv  LoadMission.srv  StopMission.srv
