<?xml version="1.0"?>
<package format="2">
  <name>mission_msgs</name>
  <version>0.0.0</version>
  <description>The mission_msgs package</description>
  <maintainer email="cami@todo.todo">Karim Barth</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <export>
  </export>
</package>
